# numerotator

./: Cargo.toml
src/: build.rs  imgt.rs  lib.rs  main.rs
src/data/: reference.fasta  reference.stockholm
src/imgt/: annotations.rs  conserved_residues.rs  mod.rs  numbering.rs  reference.rs  regions.rs  single_letter_annotations.rs
src/imgt/reference/: blacklist.txt  mod.rs  reference.stockholm
