[package]
name = "numerotator"
version = "0.1.0"
edition = "2021"
default-run = "numerotator" 

[dependencies]
anyhow = "1.0.75"
bio = "1.3.1"
clap = { version = "4.4.0", features = ["derive"] }
itertools = "0.11.0"
thiserror = "1.0.47"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-test = "0.2.4"
